--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Odin Landing</title>
 </head>
 <body>
-  <div class="header">
-    <div class="container">
+  <div class="hero">
+    <div class="header">
       <p> Header Logo</p>
       <div class="links">
         <a href="">header link one</a>
@@ -16,7 +16,16 @@
         <a href="">header link three</a>
       </div>
     </div>
-
+    <div class="content">
+      <div class="left">
+        <p class="title">This website is awesome</p>
+        <p class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <button>Sign up</button>
+      </div>
+      <div class="right">
+        <img src="./Assets/flowerbot.jpeg">
+      </div>
+    </div>
   </div>
   
 </body>
