--- a/index.html
+++ b/index.html
@@ -9,21 +9,29 @@
 <body>
   <div class="hero">
     <div class="header">
-      <p> Header Logo</p>
+      <p> AI-AI-O</p>
       <div class="links">
         <a href="">header link one</a>
         <a href="">header link two</a>
         <a href="">header link three</a>
       </div>
     </div>
-    <div class="content">
+    <div class="banner">
       <div class="left">
-        <p class="title">This website is awesome</p>
-        <p class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <button>Sign up</button>
+        <p class="title">The Artist vs. AI</p>
+        <p class="subtext">Certainly the image on the left is amazing, but does it lack qualities that only a human is capable of producing?</p>
+        <button class="signup">Sign up</button>
       </div>
       <div class="right">
         <img src="./Assets/flowerbot.jpeg">
+      </div>
+    </div>
+  </div>
+  <div class="content">
+    <p>Can you decipher which of the following is AI or Artist?</p>
+    <div class="images">
+      <div class="box1">
+        
       </div>
     </div>
   </div>
