Add content img

--- a/index.html
+++ b/index.html
@@ -31,7 +31,20 @@
     <p>Can you decipher which of the following is AI or Artist?</p>
     <div class="images">
       <div class="box1">
-        
+        <img src="./Assets/pigeon_beach.jpeg">
+        <p>Perhaps the pigeon beach?</p>
+      </div>
+      <div class="box2">
+        <img src="./Assets/field_woman.jpg">
+        <p>This woman in a field looks quite realistic.</p>
+      </div>
+      <div class="box3">
+        <img src="./Assets/villain.jpeg">
+        <p>What about this sinister gentleman?</p>
+      </div>
+      <div class="box4">
+        <img src="./Assets/charcuterie.jpg">
+        <p>Does this charcuterie board look delicious, or like a lie?!</p>
       </div>
     </div>
   </div>
